<resources>
    <string name="app_name">seeeeshtheearth</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id"/>
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token"/>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_invite_friend">Invite Friend</string>
    <string name="msg_10_june_9_00">10 June \u2022&#xd;9:00 PM</string>
    <string name="lbl_10_feb">10 Feb</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account?  Sign up</string>
    <string name="msg_jo_malone_londo3">Jo malone london\u2019s mother\u2019s day </string>
    <string name="msg_rocks_velkeinje2">Rocks Velkeinjen </string>
    <string name="msg_1st_may_sat">1st  May- Sat -2:00 PM&#xd;</string>
    <string name="msg_confirm_passwor">Confirm password</string>
    <string name="lbl_56_follwers">56 Follwers</string>
    <string name="msg_jo_malone_londo2">Jo Malone London\u2019s Mother\u2019s Day Presents</string>
    <string name="lbl_sports">Sports</string>
    <string name="lbl_about">About</string>
    <string name="lbl_prfile">Prfile</string>
    <string name="lbl_past_events">PAST EVENTS</string>
    <string name="msg_clara_tolson_jo">Clara Tolson&#xd;Join your Event Gala Music Festival</string>
    <string name="lbl_massage">Massage</string>
    <string name="lbl_calender">Calender</string>
    <string name="lbl_zenifero_bolex">Zenifero Bolex</string>
    <string name="lbl_art">Art</string>
    <string name="lbl_your_password">Your password</string>
    <string name="lbl_abc">ABC</string>
    <string name="lbl_change">Change</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_this_week">This week</string>
    <string name="lbl_pqrs">PQRS</string>
    <string name="lbl_c">C</string>
    <string name="lbl_resset_password">Resset Password</string>
    <string name="lbl_wed_3_30_pm">Wed, 3:30 pm</string>
    <string name="msg_login_with_goog">Login with Google</string>
    <string name="lbl_5k_follwers">5k Follwers</string>
    <string name="lbl_venthub">ventHub</string>
    <string name="msg_53_bush_st_sa">53 Bush St \u2022 San Francisco, CA&#xd;</string>
    <string name="msg_web_have_modern"> Web Have Modern Events Calendar Feature</string>
    <string name="lbl_micheal_ulasi">Micheal Ulasi</string>
    <string name="msg_a_virtual_eveni2">A Virtual Evening of Smooth Jazz&#xd;</string>
    <string name="lbl_re_send_code_in">Re-send code in </string>
    <string name="msg_please_enter_yo">Please enter your email address to request a password reset</string>
    <string name="lbl_tomorrow">Tomorrow</string>
    <string name="lbl_about_event">About Event</string>
    <string name="lbl_300_follwers">300 Follwers</string>
    <string name="lbl_followers">Followers</string>
    <string name="msg_international_k2">International Kids Safe Parents Night Out</string>
    <string name="msg_choose_from_cal">Choose from calender</string>
    <string name="msg_radius_gallery">Radius Gallery \u2022 Santa Cruz, CA&#xd;</string>
    <string name="msg_we_ve_send_you">We\u2019ve send you the verification code on +1 2620 0323 7631</string>
    <string name="lbl_20_min_ago">20 min ago</string>
    <string name="lbl_ronald_c_kinch">Ronald C. Kinch</string>
    <string name="lbl_read_more2">Read More</string>
    <string name="lbl_wxyz">WXYZ</string>
    <string name="lbl_tuv">TUV</string>
    <string name="lbl_350">350</string>
    <string name="lbl_apply">Apply</string>
    <string name="msg_international_k">International kids safe parents night out</string>
    <string name="lbl_3k_follwers">3k Follwers</string>
    <string name="msg_no_notification2">No Notifications</string>
    <string name="msg_international_g">International gala music festival</string>
    <string name="lbl_322_follwers">322 Follwers</string>
    <string name="msg_international_b">International Band Mu...</string>
    <string name="lbl_hub">Hub</string>
    <string name="lbl_about_me">About Me</string>
    <string name="msg_david_silbia_in">David Silbia Invite Jo Malone London\u2019s Mother\u2019s </string>
    <string name="lbl_mno">MNO</string>
    <string name="lbl_contact_us">Contact Us</string>
    <string name="lbl_ab">AB</string>
    <string name="lbl_explore_events">Explore Events </string>
    <string name="lbl_10">10
</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_send">send</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_clara_tolson">Clara Tolson&#xd;</string>
    <string name="lbl_cristofer">Cristofer</string>
    <string name="lbl_organizer">Organizer</string>
    <string name="lbl_invite">Invite</string>
    <string name="lbl_adnan_safi">Adnan Safi  </string>
    <string name="msg_invite_your_fri">Invite your friends</string>
    <string name="lbl_upgrade_pro">Upgrade Pro</string>
    <string name="lbl_event">event</string>
    <string name="msg_sat_apr_24_1">Sat, Apr 24 \u2022&#xd;1:30 PM&#xd;</string>
    <string name="lbl_buy_ticket_120">Buy Ticket $120</string>
    <string name="lbl_893_follwers">893 Follwers</string>
    <string name="lbl_jennifer_fritz">Jennifer Fritz</string>
    <string name="lbl_david_silbia2">David Silbia</string>
    <string name="lbl_like_you_events">Like you events</string>
    <string name="msg_started_followi">Started following you</string>
    <string name="lbl_helps_faqs">Helps &amp; FAQs</string>
    <string name="msg_sun_apr_25_1">Sun, Apr 25 \u2022&#xd;10:15 AM&#xd;</string>
    <string name="lbl_1_hr_ago">1 hr ago</string>
    <string name="lbl_music">Music</string>
    <string name="lbl_9_hr_ago">9 hr ago</string>
    <string name="msg_login_with_face">Login with Facebook</string>
    <string name="msg_invite_a_virtua">Invite A virtual Evening of Smooth Jazz&#xd;</string>
    <string name="lbl_abc_email_com">abc@email.com</string>
    <string name="lbl_20_120">$20-$120</string>
    <string name="lbl_angelina_zolly">Angelina Zolly</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_or">OR</string>
    <string name="msg_women_s_leaders2">"Women's Leadership Conference 2021"</string>
    <string name="lbl_explore">Explore</string>
    <string name="msg_enjoy_your_favo">Enjoy your favorite dishe and a lovely your friends and family and have a great time. Food from local food trucks will be available for purchase. Read More...</string>
    <string name="msg_no_upcoming_eve">No Upcoming Event</string>
    <string name="msg_invite_jo_malon">Invite Jo Malone London\u2019s Mother\u2019s </string>
    <string name="lbl_reviews">Reviews</string>
    <string name="lbl_next">Next</string>
    <string name="msg_find_for_food_o">Find for food or restaurant...</string>
    <string name="lbl_massages">Massages</string>
    <string name="lbl2">!</string>
    <string name="msg_already_have_an">Already have an account?  Signin</string>
    <string name="msg_enjoy_your_favo2">Enjoy your favorite dishe and a lovely your friends and family and have a great time. Food from local food trucks will be available for purchase. </string>
    <string name="msg_enjoy_your_favo3">Enjoy your favorite dishe and a lovely your friends and family and have a great time. Food from local food trucks will be available for purchase. Read More</string>
    <string name="lbl_joan_baker">Joan Baker&#xd;</string>
    <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor</string>
    <string name="lbl_games_online">Games Online</string>
    <string name="lbl_jhon_wick">Jhon Wick</string>
    <string name="lbl_ashfak_sayem">Ashfak Sayem</string>
    <string name="msg_adnan_safi_sta">Adnan Safi  Started following you</string>
    <string name="lbl_sign_in">Sign in</string>
    <string name="lbl_20_going">+20 Going</string>
    <string name="lbl_0_20">0:20</string>
    <string name="lbl_map">Map</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="lbl_david_silbia">David  Silbia</string>
    <string name="msg_get_20_for_tic">Get $20 for ticket</string>
    <string name="lbl_signin2">Signin</string>
    <string name="lbl_jkl">JKL</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_verification">Verification</string>
    <string name="msg_join_your_event">Join your Event Gala Music Festival</string>
    <string name="msg_jennifer_fritz">Jennifer Fritz Invite you International Kids Safe </string>
    <string name="lbl_vent">vent</string>
    <string name="msg_international_b2">International Band Music Concert</string>
    <string name="msg_invite_you_inte">Invite you International Kids Safe </string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_upcoming">UPCOMING</string>
    <string name="lbl_sign_out">Sign Out</string>
    <string name="lbl_cristofer_nolan">Cristofer Nolan </string>
    <string name="lbl_interest">Interest</string>
    <string name="lbl_just_now">Just now</string>
    <string name="msg_don_t_have_an_a2">Don\u2019t have an account?  </string>
    <string name="lbl_roman_kutepov">Roman Kutepov</string>
    <string name="lbl_search2">Search</string>
    <string name="msg_ronald_c_kinch">Ronald C. Kinch Like you events</string>
    <string name="msg_already_have_an2">Already have an account?  </string>
    <string name="msg_jo_malone_londo">Jo Malone London\u2019s Mo..</string>
    <string name="msg_in_publishing_a"> In publishing and graphic design, Lorem is a placeholder text commonly </string>
    <string name="lbl_5_min_ago">5 min ago</string>
    <string name="lbl_filters">Filters</string>
    <string name="lbl_events">Events</string>
    <string name="lbl_upcoming_events">Upcoming Events</string>
    <string name="msg_eric_g_pricket">Eric G. Prickett&#xd; Started following you</string>
    <string name="lbl_accept">Accept</string>
    <string name="msg_rocks_velkeinje">Rocks Velkeinjen</string>
    <string name="msg_eric_g_pricket2">Eric G. Prickett&#xd;</string>
    <string name="lbl_my_profile">My Profile</string>
    <string name="lbl_2k_follwers">2k Follwers</string>
    <string name="msg_longboard_marga">Longboard Margarita Bar </string>
    <string name="lbl_filter">Filter</string>
    <string name="msg_cinemas_is_the">Cinemas is the ultimate experience to see new movies in Gold Class or Vmax. Find a cinema near you.</string>
    <string name="msg_sat_may_1_2">Sat, May 1 \u2022&#xd;2:00 PM&#xd;</string>
    <string name="lbl_def">DEF</string>
    <string name="msg_explore_upcomin"> Explore Upcoming and Nearby Events </string>
    <string name="lbl_402_follwers">402 Follwers</string>
    <string name="msg_36_guild_street">36 Guild Street London, UK </string>
    <string name="lbl_nearby_you">Nearby You</string>
    <string name="msg_wed_apr_28_5">Wed, Apr 28 \u2022&#xd;5:30 PM&#xd;</string>
    <string name="lbl_food">Food</string>
    <string name="msg_joan_baker_inv">Joan Baker&#xd; Invite A virtual Evening of Smooth Jazz&#xd;</string>
    <string name="msg_current_locatio">Current Location</string>
    <string name="msg_women_s_leaders">"Women's leadership conference"</string>
    <string name="lbl_346">346</string>
    <string name="lbl_others">Others</string>
    <string name="msg_tuesday_4_00pm">Tuesday, 4:00PM - 9:00PM</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_follow">Follow</string>
    <string name="lbl_see_all">See All</string>
    <string name="msg_fri_apr_23_6">Fri, Apr 23 \u2022&#xd;6:00 PM&#xd;</string>
    <string name="lbl_alex_lee">Alex Lee</string>
    <string name="msg_re_send_code_in">Re-send code in  0:20</string>
    <string name="lbl_new_yourk_usa">New Yourk, USA</string>
    <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur </string>
</resources>