<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="seeAllEventsRowModel" type="com.seeeeshtheearth.app.modules.seeallevents.data.model.SeeAllEventsRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowtime"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylewhite_7">
        <FrameLayout android:id="@+id/frameStack"
            android:layout_height="@dimen/_92pxv"
            android:layout_marginBottom="@dimen/_7pxv"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="@dimen/_79pxh" style="@style/groupStyleorange_200cornerRadius">
            <ImageView android:id="@+id/imageImageEightyFour"
                android:layout_gravity="start"
                android:layout_height="@dimen/_92pxh"
                android:layout_width="@dimen/_79pxh"
                android:scaleType="fitXY"
                cornerRadius="@{@dimen/_10pxh}"
                imageRes="@{@drawable/img_image84}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image84"/>
        </FrameLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumntime"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_weight="0.72" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtTime"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{seeAllEventsRowModel.txtTime}"
                style="@style/txtAirbnbCerealAppbook13_3" tools:text="@string/msg_wed_apr_28_5"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtImGoingtoSh"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="match_parent"
                android:text="@{seeAllEventsRowModel.txtImGoingtoSh}"
                style="@style/txtAirbnbCerealAppmedium15_2" tools:text="@string/msg_jo_malone_londo2"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowmappin"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageMappin"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_10pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_mappin_bluegray_200"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_mappin_bluegray_200"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt24min"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.95"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{seeAllEventsRowModel.txt24min}"
                    style="@style/txtAirbnbCerealAppbook13_2" tools:text="@string/msg_radius_gallery"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
