<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="homeContainerVM" type="com.seeeeshtheearth.app.modules.homecontainer.data.viewmodel.HomeContainerVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumnglobe"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:id="@+id/fragmentContainer"
            android:layout_height="match_parent"
            android:layout_weight="1" android:layout_width="match_parent"/>
        <FrameLayout android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" style="@style/groupStylewhite_12">
            <LinearLayout android:id="@+id/linearRowcompass"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_30pxv"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearColumncompass"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageCompass"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_18pxh"
                        android:layout_width="@dimen/_18pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_compass"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_compass"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtExplore"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{homeContainerVM.homeContainerModel.txtExplore}"
                        style="@style/txtAirbnbCerealAppbook12_5" tools:text="@string/lbl_explore"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearColumnbag"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageBag"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_19pxh"
                        android:layout_width="@dimen/_17pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_bag"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_bag"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtEvents"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{homeContainerVM.homeContainerModel.txtEvents}"
                        style="@style/txtAirbnbCerealAppbook12_6" tools:text="@string/lbl_events"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearColumneye"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageEye"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_19pxh"
                        android:layout_width="@dimen/_16pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_eye"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_eye"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtMapTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{homeContainerVM.homeContainerModel.txtMapTwo}"
                        style="@style/txtAirbnbCerealAppbook12_6" tools:text="@string/lbl_map"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearColumnuser"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageUser"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_19pxh"
                        android:layout_width="@dimen/_15pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_user_bluegray_802"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_user_bluegray_802"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtPrfile"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{homeContainerVM.homeContainerModel.txtPrfile}"
                        style="@style/txtAirbnbCerealAppbook12_6" tools:text="@string/lbl_prfile"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
